[tool.poetry]
name = "jvmrp"
version = "0.1.0"
description = ""
authors = ["igjit"]
readme = "README.md"
packages = [{include = "jvmrp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
